--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,165 +5,181 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 二爷翻墙 https://1808.cf _1, server: 221.156.187.229, port: 30002, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: 二爷翻墙 https://1808.cf _2, server: 202.108.15.135, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: 二爷翻墙 https://1808.cf _3, server: 162.159.243.235, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: 二爷翻墙 https://1808.cf _4, server: 162.159.243.233, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
-  - {name: 二爷翻墙 https://1808.cf _5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf _6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf _7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: 二爷翻墙 https://1808.cf _8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
-  - {name: 二爷翻墙 https://1808.cf _9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf _10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf _11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf _12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: 二爷翻墙 https://1808.cf _13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf _14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: 二爷翻墙 https://1808.cf _15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf_1, server: tk.731808.tk, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf_2, server: 202.108.15.135, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf_3, server: 162.159.243.235, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf_4, server: 162.159.243.21, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf_5, server: 207.174.22.45, port: 443, type: vmess, uuid: 20c08a8d-85d6-47c6-bbb0-c8389a578b71, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /7803f1, headers: {Host: tk.731808.tk}}}
+  - {name: 二爷翻墙 https://1808.cf_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: 二爷翻墙 https://1808.cf_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: do.sharecentrepro.com}}}
+  - {name: 二爷翻墙 https://1808.cf_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: uk1.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: 二爷翻墙 https://1808.cf_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: 二爷翻墙 https://1808.cf_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: 📢 谷歌FCM
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -186,21 +202,23 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 https://1808.cf _1
-      - 二爷翻墙 https://1808.cf _2
-      - 二爷翻墙 https://1808.cf _3
-      - 二爷翻墙 https://1808.cf _4
-      - 二爷翻墙 https://1808.cf _5
-      - 二爷翻墙 https://1808.cf _6
-      - 二爷翻墙 https://1808.cf _7
-      - 二爷翻墙 https://1808.cf _8
-      - 二爷翻墙 https://1808.cf _9
-      - 二爷翻墙 https://1808.cf _10
-      - 二爷翻墙 https://1808.cf _11
-      - 二爷翻墙 https://1808.cf _12
-      - 二爷翻墙 https://1808.cf _13
-      - 二爷翻墙 https://1808.cf _14
-      - 二爷翻墙 https://1808.cf _15
+      - 二爷翻墙 https://1808.cf_1
+      - 二爷翻墙 https://1808.cf_2
+      - 二爷翻墙 https://1808.cf_3
+      - 二爷翻墙 https://1808.cf_4
+      - 二爷翻墙 https://1808.cf_5
+      - 二爷翻墙 https://1808.cf_6
+      - 二爷翻墙 https://1808.cf_7
+      - 二爷翻墙 https://1808.cf_8
+      - 二爷翻墙 https://1808.cf_9
+      - 二爷翻墙 https://1808.cf_10
+      - 二爷翻墙 https://1808.cf_11
+      - 二爷翻墙 https://1808.cf_12
+      - 二爷翻墙 https://1808.cf_13
+      - 二爷翻墙 https://1808.cf_14
+      - 二爷翻墙 https://1808.cf_15
+      - 二爷翻墙 https://1808.cf_16
+      - 二爷翻墙 https://1808.cf_17
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
