--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,188 +6,93 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 43.202.64.174
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id002
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 43.207.74.136
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇺🇦_UA_乌克兰->🇳🇱_NL_荷兰
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: nlawggbvfgerhtg.76898102.xyz
+    server: sdttkza.76898102.xyz
     port: 2082
     cipher: auto
     uuid: 4896559c-c94e-342a-b208-6107ec292652
     alterId: 0
     tls: false
     skip-cert-verify: true
-    servername: nlawggbvfgerhtg.76898102.xyz
     network: ws
     ws-opts:
-      path: /fwadfbbg
+      path: /funsdfrh
       headers:
-        host: nlawggbvfgerhtg.76898102.xyz
+        host: sdttkz.76898102.xyz
+  - &id002
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 6.sanfen001.top
+    port: 2086
+    cipher: auto
+    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.24.169.238
+    port: 443
+    cipher: auto
+    uuid: 1a25dce4-9d27-4e8d-e46e-16199be54f81
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ports/45314
+      headers:
+        host: star-one.cfd
   - &id004
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
-    type: trojan
-    server: zf.heigouyunzf.xyz
-    port: 38803
-    udp: true
-    password: e958b47d-3510-445a-99cb-dc98d227e29e
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 108.186.116.182
+    port: 55005
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
   - &id005
-    name: 🇰🇷_KR_韩国_2
-    type: ss
-    server: 43.200.255.57
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇰🇷_KR_韩国_3
-    type: ss
-    server: 43.200.1.53
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇸🇬_SG_新加坡
-    type: ssr
-    server: sg-am3.eqsunshine.com
-    port: 32001
-    password: 3g0dHlKME
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id008
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: ssr
-    server: jp2.vfun.icu
-    port: 443
-    password: vyunme
-    cipher: aes-256-cfb
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: ab93117422.jd.hk
-    protocol-param: 17422:TTp0SX
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: ssr
-    server: usstand1.eucdurl.me
-    port: 561
-    password: mblank1port
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_md5
-    protocol-param: 48566:LLLiuiuiu787878
-  - &id010
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 08.kccic2pa.xyz
-    port: 50008
-    cipher: auto
-    uuid: 834ed4d6-b0c5-4b4b-96a4-b3056a3dc441
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 198.2.203.155
-    port: 50002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 108.186.192.230
-    port: 45502
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    servername: 🇺🇸US美国(youtube阿伟科技2)
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 198.2.203.58
-    port: 44672
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    servername: 🇺🇸US美国(youtube阿伟科技2)
-    network: tcp
-  - &id014
-    name: 🇰🇷_KR_韩国_4
-    type: ss
-    server: 43.201.72.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇰🇷_KR_韩国_5
-    type: ss
-    server: 43.201.19.172
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: 8.210.154.114
-    port: 40447
-    cipher: auto
-    uuid: da8c9ac2-39de-4bed-ee9f-4e4340ade47d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-  - &id017
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 213.219.37.94
-    port: 42336
-    password: '8150068534'
-    cipher: chacha20-ietf-poly1305
-  - &id018
-    name: 🇯🇵_JP_日本_2
-    type: trojan
-    server: pqawsjp2.gsjc.cfd
-    port: 443
-    udp: true
-    password: 32068eda-adad-431a-bfd4-2f7d4c73507c
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id019
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 67.21.84.217
-    port: 47088
+    server: visa.com
+    port: 8080
     cipher: auto
-    uuid: b9a305a9-1ff2-4ec1-b338-933555833baa
-    alterId: 64
+    uuid: 722f07be-43a1-482c-c200-7a4f8076c588
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: c.ghhymua.tk
+  - &id006
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: aes-128-gcm
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: ca.ilovescp.com
+  - &id007
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: cf5.vpn66.eu.org
     port: 8080
@@ -201,53 +106,231 @@ proxies:
       path: /
       headers:
         host: vceu.vpn66.eu.org
-  - &id021
-    name: 🇺🇸_US_美国_5
+  - &id008
+    name: 🇨🇭_CH_瑞士
     type: vmess
-    server: amstd.digires.shop
+    server: 152.67.64.130
+    port: 80
+    cipher: auto
+    uuid: e2caa52d-17ea-3231-a411-c543f8a6534e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /v2ray
+      headers:
+        host: v9-dy.ixigua.com
+  - &id009
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 140.99.77.25
+    port: 50332
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 112.132.215.189
+    port: 50002
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇸🇬_SG_新加坡_1
+    type: trojan
+    server: sg1.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 12025
+    udp: true
+    password: 4b526505-3de3-4cb4-8f99-70b65adea09f
+    sni: rfetch.yektanet.net
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇯🇵_JP_日本_1
+    type: vmess
+    server: jp02-vm0.entry.srthdw.art
+    port: 11775
+    cipher: auto
+    uuid: b2a2c706-12e0-3335-8a62-31925219a712
+    alterId: 1
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇸🇬_SG_新加坡_2
+    type: trojan
+    server: sg1.gsjc.cfd
+    port: 443
+    udp: true
+    password: bce72830-6561-4af6-a2c4-052fccb94595
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: cdnjs.com
     port: 443
     cipher: auto
-    uuid: c13277ce-cda6-4d01-cedc-1e3605a0eb72
+    uuid: DCE76061-EE65-49DB-997C-A6A880DADE3A
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /12796
+      path: /speedtest
       headers:
-        host: amstd.digires.shop
+        host: Amsterdam.kotick.site
+  - &id015
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 217.79.184.18
+    port: 443
+    udp: true
+    password: f89d1762-7627-4676-b4cf-e4de76ee3636
+    sni: downloadde.xn--mes358a9urctx.com
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇭🇰_HK_香港_1
+    type: trojan
+    server: microsoft-hk01.syjd.xyz
+    port: 443
+    udp: true
+    password: 51eebef7-beaa-417b-9584-2794d10377c9
+    sni: microsoft-hk01.syjd.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇱🇺_LU_卢森堡->🇸🇬_SG_新加坡
+    type: vmess
+    server: 5.sanfen001.top
+    port: 2082
+    cipher: auto
+    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+  - &id018
+    name: 🇯🇵_JP_日本->🇰🇷_KR_韩国
+    type: trojan
+    server: vpnhat.stablize.top
+    port: 443
+    udp: true
+    password: 4d23cf0e-5ceb-43e7-90d3-63982bfa6940
+    sni: kr.stablize.top
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: in05.my1188.org
+    port: 63003
+    cipher: auto
+    uuid: f9d5690c-08e9-302a-9654-f7cfee9215ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: au01-rich.tencent.best
+  - &id020
+    name: 🇸🇬_SG_新加坡_3
+    type: trojan
+    server: hk1.gsjc.cfd
+    port: 443
+    udp: true
+    password: bce72830-6561-4af6-a2c4-052fccb94595
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇯🇵_JP_日本_2
+    type: vmess
+    server: jp04-vm0.entry.srthdw.art
+    port: 444
+    cipher: auto
+    uuid: 21c670ff-c739-3072-9286-7d2a1d300fcb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id022
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: frarmbc.76898102.xyz
-    port: 2052
-    cipher: auto
-    uuid: a031d87d-ea68-3511-bc8a-8ab98ac734e9
-    alterId: 0
-    tls: false
+    name: 🇭🇰_HK_香港_2
+    type: trojan
+    server: aws-hk03.aikun.online
+    port: 443
+    udp: true
+    password: fa9a512a-eab5-4cdf-b559-14922eb3948e
+    sni: cdn-65135431546231.78321.xyz
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /bxrmiao
-      headers:
-        host: frarmbc.76898102.xyz
+    network: tcp
   - &id023
-    name: 🇺🇸_US_美国_7
+    name: 🇯🇵_JP_日本_3
     type: vmess
-    server: asbiasncs.114514782.xyz
-    port: 2052
+    server: jp01-alt-vm0.entry.srthdw.art
+    port: 21581
     cipher: auto
-    uuid: 23b23496-2ee0-31c5-a469-ad753694a993
+    uuid: 21c670ff-c739-3072-9286-7d2a1d300fcb
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    servername: jp01-alt-vm0.entry.srthdw.art
+    network: tcp
+  - &id024
+    name: 🇸🇬_SG_新加坡_4
+    type: vmess
+    server: 69.nrz.biz.id
+    port: 80
+    cipher: auto
+    uuid: 91e2689d-4722-49ba-a285-a092f3f8dc04
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /auvbwbs
+      path: /vmess
       headers:
-        host: asbiasncs.114514782.xyz
-  - &id024
-    name: 🇬🇧_GB_英国_2
+        host: 69.nrz.biz.id
+  - &id025
+    name: 🇯🇵_JP_日本_4
+    type: trojan
+    server: jp1.gsjc.cfd
+    port: 443
+    udp: true
+    password: bce72830-6561-4af6-a2c4-052fccb94595
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇬🇧_GB_英国->🇩🇪_DE_德国
+    type: vmess
+    server: dearmb.76898102.xyz
+    port: 2052
+    cipher: auto
+    uuid: 5f9c7bda-33f9-3dd0-bcf5-aca324418e31
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ancihgrt
+      headers:
+        host: dearmb.76898102.xyz
+  - &id027
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
     server: baxwabe.76898102.xyz
     port: 2052
@@ -261,167 +344,143 @@ proxies:
       path: /aubverfsg
       headers:
         host: baxwabe.76898102.xyz
-  - &id025
-    name: 🇩🇪_DE_德国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 2.sanfen001.top
-    port: 2052
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-  - &id026
-    name: 🇩🇪_DE_德国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 7.sanfen001.top
-    port: 2095
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-  - &id027
-    name: 🇩🇪_DE_德国->🇺🇸_US_美国
-    type: vmess
-    server: 15.sanfen001.top
-    port: 8880
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
   - &id028
-    name: 🇨🇦_CA_加拿大
+    name: 🇭🇰_HK_香港_3
     type: vmess
-    server: 23.227.38.99
+    server: hk2.594888.xyz
     port: 443
     cipher: auto
-    uuid: 86d37526-5758-4cec-862f-df404b313086
+    uuid: 0ede3473-656c-3bad-ae93-b901443d3075
     alterId: 0
     tls: true
     skip-cert-verify: true
+    servername: hk2.594888.xyz
     network: ws
     ws-opts:
-      path: /3G6WPDL7
+      path: /hls/us8.m3u8
       headers:
-        host: 1.freek1.xyz
+        host: hk2.594888.xyz
   - &id029
-    name: 🇨🇳_CN_中国
+    name: 🇯🇵_JP_日本_5
     type: vmess
-    server: 112.132.215.189
-    port: 50002
+    server: jp03-alt-vm0.entry.srthdw.art
+    port: 21581
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: 21c670ff-c739-3072-9286-7d2a1d300fcb
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    servername: jp03-alt-vm0.entry.srthdw.art
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: cdn-xjp4.cqjsl.xyz
+    port: 443
+    cipher: auto
+    uuid: 85c27619-fd14-4893-a56e-05944326c6f9
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cdn-xjp4.cqjsl.xyz
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn-xjp4.cqjsl.xyz
+  - &id031
+    name: 🇸🇬_SG_新加坡_5
+    type: trojan
+    server: sg1.downloadvip.cfd
+    port: 443
+    udp: true
+    password: f89d1762-7627-4676-b4cf-e4de76ee3636
+    sni: djsg1.xn--mes358a9urctx.com
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: 120.232.177.224
+    port: 7308
+    udp: true
+    password: 97d557df-6f6a-5bad-9483-600aba02da3a
+    sni: getandroid.com
+    skip-cert-verify: true
+    network: tcp
+  - &id033
+    name: 🇯🇵_JP_日本_6
+    type: vmess
+    server: jp04-vm0.entry.srthdw.art
+    port: 446
+    cipher: auto
+    uuid: c4b2e7ea-1a0e-316f-8e28-0717cc087534
+    alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id030
-    name: 🇳🇱_NL_荷兰->🇭🇰_HK_香港
-    type: vmess
-    server: 21.sanfen001.top
-    port: 8880
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hk.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-  - &id031
-    name: 🇰🇿_KZ_哈萨克斯坦->🇯🇵_JP_日本
-    type: vmess
-    server: 8.sanfen001.top
-    port: 2095
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jpppp.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-  - &id032
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: in05.my1188.org
-    port: 63096
-    cipher: auto
-    uuid: f9d5690c-08e9-302a-9654-f7cfee9215ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hkbgp01-mg.tencent.best
-  - &id033
-    name: 🇺🇦_UA_乌克兰->🇺🇸_US_美国_1
-    type: vmess
-    server: 12.sanfen001.top
-    port: 2082
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
   - &id034
-    name: 🇺🇦_UA_乌克兰->🇺🇸_US_美国_2
-    type: vmess
-    server: 14.sanfen001.top
-    port: 80
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 13.36.175.154
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+    network: tcp
   - &id035
-    name: 🇺🇦_UA_乌克兰->🇭🇰_HK_香港
-    type: vmess
-    server: 18.sanfen001.top
-    port: 2082
-    cipher: auto
-    uuid: 82a573e6-6ac2-448a-b36b-f996ccdeda23
-    alterId: 0
-    tls: false
+    name: 🇸🇬_SG_新加坡_6
+    type: trojan
+    server: awshk1.gsjc.cfd
+    port: 443
+    udp: true
+    password: ad547213-8e05-46b1-aff5-0f7a9814a4aa
+    sni: 4-193-105-141.nhost.00cdn.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hk.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+    network: tcp
+  - &id036
+    name: 🇯🇵_JP_日本_7
+    type: vmess
+    server: jp06-vm0.entry.jpojpoh.art
+    port: 28783
+    cipher: auto
+    uuid: 21c670ff-c739-3072-9286-7d2a1d300fcb
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    servername: jp06-vm0.entry.jpojpoh.art
+    network: tcp
+  - &id037
+    name: 🇭🇰_HK_香港_4
+    type: trojan
+    server: microsoft-hk02.syjd.xyz
+    port: 443
+    udp: true
+    password: 51eebef7-beaa-417b-9584-2794d10377c9
+    skip-cert-verify: true
+    network: tcp
+  - &id038
+    name: 🇸🇬_SG_新加坡_7
+    type: trojan
+    server: hk2.gsjc.cfd
+    port: 443
+    udp: true
+    password: bce72830-6561-4af6-a2c4-052fccb94595
+    skip-cert-verify: true
+    network: tcp
+  - &id039
+    name: 🇯🇵_JP_日本_8
+    type: vmess
+    server: jp06-vm0.entry.jpojpoh.art
+    port: 28785
+    cipher: auto
+    uuid: b2a2c706-12e0-3335-8a62-31925219a712
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    servername: jp06-vm0.entry.jpojpoh.art
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -483,6 +542,10 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -523,6 +586,10 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: SELECT
     type: select
     proxies:
@@ -561,6 +628,10 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
