--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,211 +6,217 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.abpilot.xyz
-    network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 142.4.110.29
-    port: 52908
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p05.abzoones.xyz
-    port: 36106
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp05.abpilot.xyz
-    network: tcp
-  - &id007
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 7p3h04.abzoones.xyz
-    port: 36801
+    server: 1a4p0h04.mcfront.xyz
+    port: 31801
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ph04.abpilot.xyz
+    servername: ph04.lovemc.xyz
     network: tcp
-  - &id008
+  - &id002
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
+    type: vmess
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.lovemc.xyz
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 1c7s2g06.mcfront.xyz
+    port: 31211
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.lovemc.xyz
+    network: tcp
+  - &id004
     name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
     type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
+    server: 3c2h4u04.mcfront.xyz
+    port: 31864
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hu04.abpilot.xyz
+    servername: hu04.lovemc.xyz
     network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
-    type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg05.abpilot.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id012
+  - &id005
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
+    server: 4a2u0a06.mcfront.xyz
+    port: 31511
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: us06.abpilot.xyz
+    servername: us06.lovemc.xyz
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 4t1u6r04.mcfront.xyz
+    port: 31868
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tr04.lovemc.xyz
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: 9t1d5e04.mcfront.xyz
+    port: 31841
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.lovemc.xyz
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: vmess
+    server: 5m4h0k04.mcfront.xyz
+    port: 31601
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk04.lovemc.xyz
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 4a2u0a04.mcfront.xyz
+    port: 31501
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us04.lovemc.xyz
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
+    type: vmess
+    server: 6w7j3p06.mcfront.xyz
+    port: 31111
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp06.lovemc.xyz
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 9s5g06.abzoones.xyz
+    port: 36211
+    cipher: auto
+    uuid: f30733eb-b6e9-4593-baca-b02db8189263
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.abpilot.xyz
+    network: tcp
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 3u1s05.abzoones.xyz
+    port: 36506
+    cipher: auto
+    uuid: f30733eb-b6e9-4593-baca-b02db8189263
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.abpilot.xyz
     network: tcp
   - &id013
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 108.166.203.181
-    port: 44945
+    server: cf5.992688.xyz
+    port: 8080
     cipher: auto
-    uuid: 268a491b-764c-44d1-81a4-30de16130867
-    alterId: 64
+    uuid: 6b056a2c-b821-44b2-cf66-59a1126f6c94
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: o1.992688.xyz
   - &id014
-    name: 🇺🇸_US_美国_3
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
     type: vmess
-    server: 142.4.104.58
-    port: 53986
+    server: 9s5g04.abzoones.xyz
+    port: 36201
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: f30733eb-b6e9-4593-baca-b02db8189263
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: sg04.abpilot.xyz
     network: tcp
   - &id015
     name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
     type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
+    server: 8l2k1r04.mcfront.xyz
+    port: 31401
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: kr04.abpilot.xyz
+    servername: kr04.lovemc.xyz
     network: tcp
   - &id016
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
+    server: 4t1r5u04.mcfront.xyz
+    port: 31851
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tw04.abpilot.xyz
+    servername: ru04.lovemc.xyz
     network: tcp
   - &id017
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
     type: vmess
-    server: 8h2k04.abzoones.xyz
-    port: 36601
+    server: 7c6i2r04.mcfront.xyz
+    port: 31877
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk04.abpilot.xyz
+    servername: br04.lovemc.xyz
     network: tcp
   - &id018
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 67.21.95.73
-    port: 53314
+    server: 108.186.116.177
+    port: 55005
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
@@ -218,148 +224,105 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id019
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
     type: vmess
-    server: 8r5u04.abzoones.xyz
-    port: 36851
+    server: 8h2k05.abzoones.xyz
+    port: 36606
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: f30733eb-b6e9-4593-baca-b02db8189263
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ru04.abpilot.xyz
+    servername: hk05.abpilot.xyz
     network: tcp
   - &id020
-    name: 🇺🇸_US_美国_5
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
     type: vmess
-    server: 198.2.204.245
-    port: 46902
+    server: 4a2u0a05.mcfront.xyz
+    port: 31506
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: us05.lovemc.xyz
     network: tcp
   - &id021
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
     type: vmess
-    server: 3v4n04.abzoones.xyz
-    port: 36874
+    server: 5m4h0k06.mcfront.xyz
+    port: 31611
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: vn04.abpilot.xyz
+    servername: hk06.lovemc.xyz
     network: tcp
   - &id022
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
     type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
+    server: 2d1t5w05.mcfront.xyz
+    port: 31306
     cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ar04.abpilot.xyz
+    servername: tw05.lovemc.xyz
     network: tcp
   - &id023
-    name: 🇺🇸_US_美国_6
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
     type: vmess
-    server: 198.2.234.108
-    port: 51322
+    server: 2d1t5w04.mcfront.xyz
+    port: 31301
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: tw04.lovemc.xyz
     network: tcp
   - &id024
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 2u3k04.abzoones.xyz
-    port: 36811
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.abpilot.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 38.40.219.182
-    port: 53362
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 8u9a04.abzoones.xyz
-    port: 36871
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.abpilot.xyz
-    network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 3u1s04.abzoones.xyz
-    port: 36501
-    cipher: auto
-    uuid: 92180dc8-8f6b-4589-8865-2a4f98d84d82
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.abpilot.xyz
-    network: tcp
-  - &id029
-    name: 🇹🇼_TW_台湾_1
-    type: trojan
-    server: gs-hinet.gsjc.cfd
+    server: bluehost.com
     port: 443
-    udp: true
-    password: bce72830-6561-4af6-a2c4-052fccb94595
-    sni: 20-212-60-88.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id030
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 104.31.16.28
-    port: 80
     cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
+      path: /16575
       headers:
-        host: ca4.tehme2.fun
-  - &id031
+        host: cdnca1.digisport.shop
+  - &id025
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+    type: vmess
+    server: 1j8p04.abzoones.xyz
+    port: 36116
+    cipher: auto
+    uuid: f30733eb-b6e9-4593-baca-b02db8189263
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp04.abpilot.xyz
+    network: tcp
+  - &id026
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
+    type: vmess
+    server: 6w7j3p04.mcfront.xyz
+    port: 31116
+    cipher: auto
+    uuid: 1faeda42-d9b0-4ff9-bd30-ef71e93af6a0
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp04.lovemc.xyz
+    network: tcp
+  - &id027
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
     server: speedip.eu.org
@@ -374,37 +337,22 @@ proxies:
       path: /waugfuigvhwoa
       headers:
         host: nl_nat.v50.one
-  - &id032
-    name: 🇺🇸_US_美国->🇮🇩_ID_印度尼西亚
+  - &id028
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: sooya.biz.id
-    port: 443
+    server: cf5.vpn66.eu.org
+    port: 8080
     cipher: auto
-    uuid: c7169000-13f9-11ee-b432-205c6d5f5d78
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-      headers:
-        host: asia1.oceis.net
-  - &id033
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: 4f859149-2b2f-4b90-9a2c-8c0fe15c8c4c
+    uuid: c3b11744-2b20-46af-f0d4-69122be36e74
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /ozX9aUPiJVtoLavjTW
+      path: /
       headers:
-        host: de14.irteh.fun
-  - &id034
+        host: vcus.vpn66.eu.org
+  - &id029
     name: 🇬🇧_GB_英国
     type: vmess
     server: 109.74.201.20
@@ -417,39 +365,22 @@ proxies:
     network: ws
     ws-opts:
       path: /chat
-  - &id035
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: ahsorathiyaa.fly.dev
-    port: 443
-    cipher: auto
-    uuid: de04add9-5c68-8bab-950c-08cd5320df18
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ahsorathiyaa.fly.dev
-  - &id036
-    name: 🇹🇼_TW_台湾_2
+  - &id030
+    name: 🇹🇼_TW_台湾_1
     type: trojan
-    server: tw2.yihaobao.xyz
-    port: 10021
+    server: 211.21.20.69
+    port: 443
     udp: true
-    password: 7021226a-9377-4c14-83db-8d98712ef948
-    sni: tls.yihaobao.xyz
+    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
     skip-cert-verify: true
     network: tcp
-  - &id037
-    name: 🇸🇬_SG_新加坡
+  - &id031
+    name: 🇹🇼_TW_台湾_2
     type: trojan
-    server: sgmax05.170203.xyz
+    server: ip1158944211.mobgslb.tbcache.com
     port: 443
     udp: true
-    password: 07578f26-1009-4c31-8c4d-fc46f1eef55f
-    sni: sgmax05.170203.xyz
+    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -509,12 +440,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -551,12 +476,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
   - name: SELECT
     type: select
     proxies:
@@ -591,12 +510,6 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
